k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-provider
  template:
    metadata:
      labels:
        app: oauth-provider
    spec:
      containers:
        - name: oauth-provider
          image: w8404gg/oauth-provider:latest
          ports:
            - containerPort: 8080
