k8s/node_port.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth-provider
spec:
  type: NodePort
  selector:
    app: oauth-provider
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31902
