k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth-provider
spec:
  selector:
    app: oauth-provider
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
